--- a/style/scss/utilities/_stats.scss
+++ b/style/scss/utilities/_stats.scss
@@ -52,7 +52,7 @@
         padding: 10px 20px;
         background-color: variables.$color-primary;
         font-size: variables.$font-size * 1.2;
-        border-radius: 5px;
+        border-radius: variables.$border-radius-base;
         cursor: pointer;
         align-self: flex-end;
         margin-top: 25px;
