--- a/style/scss/utilities/_variables.scss
+++ b/style/scss/utilities/_variables.scss
@@ -15,4 +15,4 @@ $border-primary: 3px solid $color-primary;
 $border-secondary: 3px solid $color-secondary;
 $border-white: 3px solid $color-white;
 
-// TODO box-shadow carousel ligne 20
+$border-radius-base: 0.5rem;
