--- a/style/scss/utilities/_blog.scss
+++ b/style/scss/utilities/_blog.scss
@@ -1,4 +1,5 @@
 @use "variables";
+@import "../mixins/boxShadow";
 
 .blogs {
   padding: 25px 0;
@@ -33,9 +34,9 @@
         height: 70px;
 
         img {
+          @include boxShadow(0, 1rem, 1rem, -0.75rem);
           width: 100%;
           border-radius: 50%;
-          box-shadow: 0 1rem 1rem -0.75rem variables.$color-accent;
         }
       }
 
