--- a/style/scss/utilities/_character.scss
+++ b/style/scss/utilities/_character.scss
@@ -28,7 +28,7 @@
         height: 42px;
         padding: 4px;
         border: variables.$border-secondary;
-        border-radius: 5px;
+        border-radius: variables.$border-radius-base;
         outline: none;
 
         &:hover {
@@ -45,7 +45,7 @@
       input {
         padding: 10px 20px;
         border: none;
-        border-radius: 5px;
+        border-radius: variables.$border-radius-base;
         background-color: variables.$color-primary;
         color: variables.$color-white;
         font-size: variables.$font-size * 1.2;
