--- a/style/scss/utilities/_character.scss
+++ b/style/scss/utilities/_character.scss
@@ -1,16 +1,19 @@
 @use "variables";
+@use "general";
+@import "../mixins/flexRow";
 
 .character {
   padding: 40px 0;
+  max-width: 1000px;
+  margin: 0 auto;
+
   &__text {
     font-size: variables.$font-size * 1.2;
     text-align: center;
   }
 
   &__form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexRow(center, center);
     margin-top: 40px;
 
     .form__group {
@@ -26,7 +29,7 @@
       input {
         width: 250px;
         height: 42px;
-        padding: 4px;
+        padding: 8px;
         border: variables.$border-secondary;
         border-radius: variables.$border-radius-base;
         outline: none;
@@ -39,26 +42,30 @@
     }
 
     .form__submit {
-      display: flex;
-      justify-content: end;
+      @include flexRow(end);
 
       input {
-        padding: 10px 20px;
-        border: none;
-        border-radius: variables.$border-radius-base;
-        background-color: variables.$color-primary;
-        color: variables.$color-white;
-        font-size: variables.$font-size * 1.2;
-        cursor: pointer;
-        // TODO faire hover sur les bouttons
+        @extend %input-submit-base;
       }
     }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .character {
+    padding: 40px 20px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .character {
+    margin: 0 50px;
   }
 }
 
 @media screen and (max-width: 550px) {
   .character__form {
     flex-direction: column;
+    margin-top: 20px;
 
     .form__group {
       margin: 20px;
