--- a/style/css/style.css
+++ b/style/css/style.css
@@ -108,6 +108,30 @@
   opacity: 1;
 }
 
+@media screen and (max-width: 950px) {
+  .carousel {
+    display: block;
+    position: relative;
+  }
+  .carousel .material-icons {
+    font-size: 40px;
+    color: black;
+  }
+  .carousel .carousel__right--position, .carousel .carousel__left--position {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 0.5rem;
+  }
+  .carousel .carousel__left--position {
+    left: 10px;
+  }
+  .carousel .carousel__right--position {
+    right: 10px;
+  }
+}
 *,
 ::before,
 ::after {
