--- a/style/scss/utilities/_carousel.scss
+++ b/style/scss/utilities/_carousel.scss
@@ -61,3 +61,31 @@
     }
   }
 }
+@media screen and (max-width: 950px) {
+  .carousel {
+    display: block;
+    position: relative;
+
+    .material-icons {
+      font-size: 40px;
+      color: black;
+    }
+
+    %carousel--position {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 1;
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: variables.$border-radius-base;
+    }
+    .carousel__left--position {
+      @extend %carousel--position;
+      left: 10px;
+    }
+    .carousel__right--position {
+      @extend %carousel--position;
+      right: 10px;
+    }
+  }
+}
