--- a/style/scss/utilities/_general.scss
+++ b/style/scss/utilities/_general.scss
@@ -26,7 +26,7 @@ body {
 .logo {
   width: 200px;
 }
-%input-submit-base {
+%btn-base {
   padding: 10px 20px;
   border: none;
   border-radius: variables.$border-radius-base;
