--- a/style/css/style.css
+++ b/style/css/style.css
@@ -19,8 +19,8 @@
 }
 .blogs__container {
   display: flex;
-  justify-content: center;
-  align-items: space-between;
+  justify-content: space-between;
+  align-items: strech;
 }
 .blogs__container .blog {
   flex-basis: 30%;
@@ -51,8 +51,8 @@
 }
 .carousel {
   display: flex;
-  justify-content: center;
-  align-items: space-between;
+  justify-content: space-between;
+  align-items: center;
   padding: 0 10px;
 }
 .carousel ::-webkit-scrollbar {
@@ -204,8 +204,8 @@ body {
 }
 .character__form .form__submit {
   display: flex;
-  justify-content: center;
-  align-items: end;
+  justify-content: end;
+  align-items: strech;
 }
 @media screen and (max-width: 1200px) {
   .character {
@@ -335,6 +335,7 @@ body {
   grid-column: 1/2;
   grid-row: 1/3;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 .gallery__container .gallery__shrek-calin {
@@ -345,12 +346,14 @@ body {
   grid-column: 5/6;
   grid-row: 1/2;
   display: flex;
+  justify-content: center;
   align-items: end;
 }
 .gallery__container .gallery__ane {
   grid-column: 6/7;
   grid-row: 1/3;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 .gallery__container .gallery__chat {
@@ -376,6 +379,7 @@ body {
     grid-row: 4/5;
     display: flex;
     justify-content: center;
+    align-items: strech;
   }
   .gallery__container .gallery__shrek-ane img {
     max-width: 60%;
@@ -388,12 +392,14 @@ body {
     grid-column: 4/5;
     grid-row: 1/2;
     display: flex;
+    justify-content: center;
     align-items: end;
   }
   .gallery__container .gallery__ane {
     grid-column: 1/2;
     grid-row: 3/span 2;
     display: flex;
+    justify-content: center;
     align-items: start;
   }
   .gallery__container .gallery__chat {
@@ -426,8 +432,8 @@ footer .menu__link a, .header .menu__link a {
 
 .header {
   display: flex;
-  justify-content: center;
-  align-items: space-between;
+  justify-content: space-between;
+  align-items: strech;
   margin: 25px 0 40px 0;
 }
 .header h1 {
@@ -436,7 +442,7 @@ footer .menu__link a, .header .menu__link a {
 .header .menu {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: strech;
   margin: 25px 0;
 }
 .header .menu__link {
@@ -459,12 +465,12 @@ footer {
 footer .container__logo {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: strech;
 }
 footer .menu {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: strech;
   margin: 25px 0;
 }
 footer .menu__link {
@@ -485,8 +491,8 @@ footer .separator {
 }
 footer .last-line {
   display: flex;
-  justify-content: center;
-  align-items: space-between;
+  justify-content: space-between;
+  align-items: strech;
   margin: 25px 0;
 }
 footer .last-line__social img {
@@ -496,8 +502,8 @@ footer .last-line__social img {
 }
 footer .last-line__contact {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: center;
 }
 footer .last-line__contact--phone {
   font-size: 0.9rem;
@@ -602,8 +608,8 @@ footer .last-line__contact img {
 }
 .movies__container {
   display: flex;
-  justify-content: center;
-  align-items: space-between;
+  justify-content: space-between;
+  align-items: strech;
 }
 .movies__container .movie {
   flex-basis: 20%;
@@ -643,8 +649,8 @@ footer .last-line__contact img {
 }
 .slogan .slogan__container {
   display: flex;
-  justify-content: center;
-  align-items: space-around;
+  justify-content: space-around;
+  align-items: center;
   padding: 40px;
 }
 .slogan .slogan__container .slogan__text {
