--- a/style/scss/utilities/_gallery.scss
+++ b/style/scss/utilities/_gallery.scss
@@ -1,8 +1,10 @@
 @use "variables";
+@import "../mixins/grid";
+@import "../mixins/flexRow";
+@import "../mixins/flexColumn";
 
 .gallery__container {
-  display: grid;
-  grid-template-columns: 1.5fr repeat(5, 1fr);
+  @include grid(1.5fr repeat(5, 1fr));
   grid-gap: 15px;
   margin: 25px auto;
 
@@ -10,8 +12,7 @@
     &__shrek-ane {
       grid-column: 1 / 2;
       grid-row: 1 / 3;
-      display: flex;
-      align-items: center;
+      @include flexRow(center, center);
     }
     &__shrek-calin {
       grid-column: 2 / span 3;
@@ -20,14 +21,12 @@
     &__fiona {
       grid-column: 5 / 6;
       grid-row: 1 / 2;
-      display: flex;
-      align-items: end;
+      @include flexRow(center, end);
     }
     &__ane {
       grid-column: 6 / 7;
       grid-row: 1 / 3;
-      display: flex;
-      align-items: center;
+      @include flexRow(center, center);
     }
     &__chat {
       grid-column: 2 / 3;
@@ -54,8 +53,7 @@
       &__shrek-ane {
         grid-column: 2 / span 3;
         grid-row: 4 / 5;
-        display: flex;
-        justify-content: center;
+        @include flexRow(center);
 
         img {
           max-width: 60%;
@@ -68,14 +66,12 @@
       &__fiona {
         grid-column: 4 / 5;
         grid-row: 1 / 2;
-        display: flex;
-        align-items: end;
+        @include flexRow(center, end);
       }
       &__ane {
         grid-column: 1 / 2;
         grid-row: 3 / span 2;
-        display: flex;
-        align-items: start;
+        @include flexRow(center, start);
       }
       &__chat {
         grid-column: 1 / 2;
