--- a/style/scss/utilities/_movies.scss
+++ b/style/scss/utilities/_movies.scss
@@ -1,8 +1,9 @@
 @use "variables";
 @import "../mixins/flexRow";
+@import "../mixins/flexColumn";
 @import "../mixins/boxShadow";
+@import "../mixins/grid";
 
-/*******  section movies  *******/
 .movies {
   padding: 40px 0;
 
@@ -22,16 +23,12 @@
 
   &__container {
     @include flexRow(space-between);
-    //display: flex;
-    //justify-content: space-between;
 
     .movie {
       flex-basis: 20%;
-      display: flex;
+      @include flexColumn(center);
       @include boxShadow(0, 1.5rem, 3rem, -0.75rem);
       border-radius: variables.$border-radius-base;
-      flex-direction: column;
-      align-items: center;
       padding: 20px 10px 10px 10px;
       row-gap: 20px;
 
@@ -52,16 +49,23 @@
 @media screen and (max-width: 1300px) {
   .movies {
     &__container {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      @include grid(repeat(2, 1fr));
       gap: 40px;
     }
   }
 }
+@media screen and (max-width: 1200px) {
+  .movies {
+    &__container {
+      padding: 20px;
+    }
+  }
+}
+
 @media screen and (max-width: 850px) {
   .movies {
     &__container {
-      grid-template-columns: 1fr;
+      @include grid(1fr);
       gap: 40px;
     }
   }
