--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -2,6 +2,7 @@
 @use "utilities/blog";
 @use "utilities/carousel";
 @use "utilities/character";
+@use "utilities/confirmation";
 @use "utilities/contact";
 @use "utilities/general";
 @use "utilities/gallery";
