--- a/style/scss/utilities/_variables.scss
+++ b/style/scss/utilities/_variables.scss
@@ -4,6 +4,7 @@ $color-white: #fff;
 $color-primary: #91a644;
 $color-secondary: #eeddac;
 $color-accent: #6a5243;
+$color-error: #ff3860;
 
 $font-primary: "Nunito", sans-serif;
 $font-accent: "Lora", serif;
