--- a/style/css/style.css
+++ b/style/css/style.css
@@ -8,7 +8,7 @@
   text-align: center;
 }
 .blogs__title {
-  font-size: 32px;
+  font-size: 48px;
   padding: 25px 0;
 }
 .blogs__description {
@@ -153,7 +153,7 @@ body {
   width: 200px;
 }
 
-.stats .container .right__btn, .slogan .slogan__container .slogan__btn, .contact .contact__form .form__submit input, .character__form .form__submit input {
+.stats .container .right__btn, .slogan .slogan__container .slogan__btn, .contact .contact__form .form__submit input, .confirmation .confirmation__container .confirmation__btn, .character__form .form__submit input {
   padding: 10px 20px;
   border: none;
   border-radius: 0.5rem;
@@ -162,7 +162,7 @@ body {
   font-size: 19.2px;
   cursor: pointer;
 }
-.stats .container .right__btn:hover, .slogan .slogan__container .slogan__btn:hover, .contact .contact__form .form__submit input:hover, .character__form .form__submit input:hover {
+.stats .container .right__btn:hover, .slogan .slogan__container .slogan__btn:hover, .contact .contact__form .form__submit input:hover, .confirmation .confirmation__container .confirmation__btn:hover, .character__form .form__submit input:hover {
   color: black;
   box-shadow: 0 1rem 1rem -0.75rem #6a5243;
   transform: scale(1.1);
@@ -226,6 +226,30 @@ body {
     margin: 20px;
   }
 }
+.confirmation {
+  background-color: #eeddac;
+  height: 50vh;
+  margin-bottom: 40px;
+}
+.confirmation .confirmation__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 40px;
+  height: 100%;
+}
+.confirmation .confirmation__container .confirmation__text {
+  font-family: lora;
+  font-size: 40px;
+  text-align: center;
+  padding-bottom: 20px;
+}
+.confirmation .confirmation__container .confirmation__btn a {
+  color: #fff;
+  text-decoration: none;
+}
+
 .contact {
   position: relative;
   margin: 40px auto;
@@ -279,6 +303,22 @@ body {
   justify-content: end;
   align-items: strech;
 }
+.contact .contact__form .input-control.succes input,
+.contact .contact__form .input-control.succes textarea {
+  border-color: #91a644;
+}
+.contact .contact__form .input-control.error input,
+.contact .contact__form .input-control.error textarea {
+  border-color: #ff3860;
+}
+.contact .contact__form .input-control .error-message {
+  color: #ff3860;
+  font-size: 12px;
+  height: 16px;
+  padding-left: 3px;
+  padding-top: 3px;
+}
+
 @media screen and (max-width: 1300px) {
   .contact__form .form__group--row {
     flex-direction: column;
